export const snapshot = {};

snapshot[`Project List Command - Help Text 1`] = `
stdout:
"
\\x1b[1mUsage:\\x1b[22m \\x1b[95mlist\\x1b[39m

\\x1b[1mDescription:\\x1b[22m

  List projects

\\x1b[1mOptions:\\x1b[22m

  \\x1b[94m-h\\x1b[39m, \\x1b[94m--help\\x1b[39m             \\x1b[31m\\x1b[1m-\\x1b[22m\\x1b[39m Show this help.               
  \\x1b[94m--team\\x1b[39m       \\x1b[33m<\\x1b[39m\\x1b[95mteam\\x1b[39m\\x1b[33m>\\x1b[39m    \\x1b[31m\\x1b[1m-\\x1b[22m\\x1b[39m Filter by team key            
  \\x1b[94m--all-teams\\x1b[39m            \\x1b[31m\\x1b[1m-\\x1b[22m\\x1b[39m Show projects from all teams  
  \\x1b[94m--status\\x1b[39m     \\x1b[33m<\\x1b[39m\\x1b[95mstatus\\x1b[39m\\x1b[33m>\\x1b[39m  \\x1b[31m\\x1b[1m-\\x1b[22m\\x1b[39m Filter by status name         
  \\x1b[94m-w\\x1b[39m, \\x1b[94m--web\\x1b[39m              \\x1b[31m\\x1b[1m-\\x1b[22m\\x1b[39m Open in web browser           
  \\x1b[94m-a\\x1b[39m, \\x1b[94m--app\\x1b[39m              \\x1b[31m\\x1b[1m-\\x1b[22m\\x1b[39m Open in Linear.app            
  \\x1b[94m-j\\x1b[39m, \\x1b[94m--json\\x1b[39m             \\x1b[31m\\x1b[1m-\\x1b[22m\\x1b[39m Output as JSON                

"
stderr:
""
`;

snapshot[`Project List Command - No Projects Found 1`] = `
stdout:
"No projects found.
"
stderr:
""
`;

snapshot[`Project List Command - No Projects Found JSON 1`] = `
stdout:
"[]
"
stderr:
""
`;

snapshot[`Project List Command - With JSON Output 1`] = `
stdout:
'[
  {
    "id": "project-json-1",
    "slugId": "json-proj",
    "name": "JSON Test Project",
    "description": "A project for JSON output",
    "status": {
      "id": "status-1",
      "name": "In Progress",
      "type": "started"
    },
    "lead": {
      "name": "test.user",
      "displayName": "Test User",
      "initials": "TU"
    },
    "teams": [
      "ENG"
    ],
    "priority": 2,
    "health": "onTrack",
    "startDate": "2024-01-15",
    "targetDate": "2024-03-30",
    "url": "https://linear.app/test/project/json-proj",
    "createdAt": "2024-01-10T10:00:00Z",
    "updatedAt": "2024-01-20T15:30:00Z"
  }
]
'
stderr:
""
`;
